# ai-idmc-scale-test

./: .dockerignore  .env.example  .gitattributes  .gitignore  DEMO.md  DEMO_V2.md  DEPLOYMENT.md  Dockerfile  Dockerfile.ui  ONBOARDING.md  README.md  ai_governance_mcp.py  build_taxonomy_full.py  cdgc_bulk_import.py  collect_scale_stats.py  create-rule.sh  curate_scale.py  data_onboarding_mcp.py  discover_rel_type.py  docker-compose.yml  dq_monitor_mcp.py  extract_cdgc_columns.py  finalize_stats.py  generate_dqro_import.py  glossary_manager_mcp.py  governance_engine_mcp.py  governance_ui.py  lineage_reporter_mcp.py  load_scale_test_data.py  probe_dq_template.py  probe_rule_specs.py  pyproject.toml  refresh-session.sh  requirements.txt  run_scale_pipeline.py  run_scale_test.py  scale_full_pipeline.py  scale_scan_dq.py  setup_cdgc_source.py  snowflake_types.py  (+10 more)
deploy/: _load_env.ps1  azure_deploy.ps1  azure_deploy.sh  azure_deploy_import_job.ps1  azure_deploy_pipeline_job.ps1  azure_deploy_scan_job.ps1  azure_deploy_ui.ps1  install.ps1  setup_agent_vm.ps1
docker/: Dockerfile  Dockerfile.ui
docs/: DEMO_V2.md  DEPLOYMENT.md  DOCS_INDEX.md  SAMEER_SCALE_RESULTS.md  SCALE_RESULTS.md  azure-reference-architecture.md  idmc-governance-agent-knowledge-transfer.md
examples/: README.md  completeness-check.json  consistency-check.json  format-check.json  null-check.json  profiling-rule-mapping.json  range-check.json  timeliness-check.json  uniqueness-check.json
reference/: azure-reference-architecture.html
scripts/: login-v3.sh  login.sh  start-ui.sh  start_bulk_import.sh  (+1 more)
(+35 files in other folders)
